<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_gray"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48dp"
        android:gravity="end|bottom"
        ></TextView>
<LinearLayout
    android:layout_weight="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/_7"
        android:id="@+id/btnSeven"
        android:layout_weight="1" />

    <Button
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/_8"
        android:id="@+id/btnEight"
        android:layout_weight="1" />

    <Button
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="onDigit"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/_9"
        android:id="@+id/btnNine"
        android:layout_weight="1" />

    <Button
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="onOperator"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/divide"
        android:id="@+id/btnDivide"
        android:layout_weight="1" />
</LinearLayout>
    <LinearLayout

        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:id="@+id/btnFour"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:id="@+id/btnFive"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:id="@+id/btnSix"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:id="@+id/btnMultiply"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:id="@+id/btnOne"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:id="@+id/btnTwo"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:id="@+id/btnThree"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/substract"
            android:id="@+id/btnSubstract"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:id="@+id/btnZero"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="."
            android:id="@+id/btnDot"
            android:layout_weight="1" />

        <Button
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="onClear"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clr"
            android:id="@+id/btnClr"
            android:layout_weight="1" />

        <Button
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/btnAdd"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="35sp"
            android:textStyle="bold"
            android:onClick="onEqual"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="="
            android:id="@+id/btnEqual"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>